Quantum 1.3.0